force-app/main/default/objects/MUSW__Attestation__c/MUSW__Attestation__c.object-meta.xml
<CustomObject>
    <label>Attestation</label>
    <nameField>
        <label>Attestation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attestations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>