force-app/main/default/objects/MUSW__Attestation__c/fields/AVO_Object_Types_String__c.field-meta.xml
<CustomField>
    <fullName>AVO_Object_Types_String__c</fullName>
    <formula>IF ( INCLUDES (  MUSW__Object_Types__c , &quot;MUSW__Permit2__c&quot; ), &quot;MUSW__Permit2__c;&quot;,null ) &amp;
IF ( INCLUDES (  MUSW__Object_Types__c , &quot;AVO_Meter_Transaction__c&quot; ), &quot;AVO_Meter_Transaction__c;&quot;,null ) &amp;
IF ( INCLUDES (  MUSW__Object_Types__c , &quot;AVO_Withdrawals__c&quot; ), &quot;AVO_Withdrawals__c&quot;,null ) &amp;
IF ( INCLUDES (  MUSW__Object_Types__c , &quot;AVO_Compliance__c&quot; ), &quot;AVO_Compliance__c&quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Types String</label>
    <type>Text</type>
</CustomField>