force-app/main/default/objects/MUSW__Attestation__c/fields/MUSW__Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>DateTime</type>
</CustomField>