force-app/main/default/objects/MUSW__Attestation__c/fields/MUSW__Language_Locale__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Language_Locale__c</fullName>
    <label>Language Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Language_Locales</valueSetName>
    </valueSet>
</CustomField>