force-app/main/default/objects/MUSW__Attestation__c/fields/MUSW__Message__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>