force-app/main/default/objects/MUSW__Attestation__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Language_Locale__c</columns>
    <columns>MUSW__Object_Types__c</columns>
    <columns>MUSW__Object_Record_Types__c</columns>
    <columns>MUSW__Effective_Start_Date__c</columns>
    <columns>MUSW__Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>